--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEYNAR_API_KEY = 'BB08AFBB-6871-48CE-AAD3-DCB4F0DE2F37'
 VERCEL_URL = 'https://based-launch.vercel.app'
+WARPCAST_HASH = '0x2511beffe17f1b66037a65addf6784356d5e8500'
