--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "frog": "latest",
+    "frog": "^0.11.6",
     "hono": "^4",
     "next": "14.1.0",
     "react": "^18",
